# converter

./: converter.cabal
app/: Main.hs
src/: Bits.hs  MyLib.hs
test/: MyLibTest.hs
